Added Leaflet Clustering

--- a/src/InteractiveMap/InteractiveMap.css
+++ b/src/InteractiveMap/InteractiveMap.css
@@ -1,2 +1,4 @@
+@import url("../../node_modules/leaflet.markercluster/dist/MarkerCluster.css");
+@import url("../../node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css");
 
 #mapid { height: 70vh; }
