--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,8 @@
+@import url("../../node_modules/semantic-ui-css/semantic.css");
 @import url("../../node_modules/react-datetime/css/react-datetime.css");
 @import url("../../node_modules/leaflet/dist/leaflet.css");
-@import url("../../node_modules/semantic-ui-css/semantic.css");
+@import url("../../node_modules/leaflet.markercluster/dist/MarkerCluster.css");
+@import url("../../node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css");
 
 .App {
   text-align: center;
